# pycounts_radifar

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/pycounts_radifar/: __init__.py  plotting.py  pycounts_radifar.py
tests/: einstein.txt  test_pycounts_radifar.py
