[tool.poetry]
name = "pycounts_radifar"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Muhammad Radifar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
